--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,18 +32,24 @@ dependencies:
   auth_buttons: ^3.0.0
   chewie: ^1.4.0
   cupertino_icons: ^1.0.2
+  ffmpeg_kit_flutter: ^5.1.0
   firebase_auth: ^4.2.5
   firebase_core: ^2.4.1
   firebase_database: ^10.0.9
   firebase_storage: ^11.0.10
   flutter:
     sdk: flutter
+  flutter_screenutil: ^5.6.1
+  flutter_sound: ^9.2.13
+  gallery_saver: ^2.3.2
   google_sign_in: ^5.4.4
   http: ^0.13.5
   image_picker: ^0.8.6+1
+  just_audio: ^0.9.31
   path_provider: ^2.0.12
+  shared_preferences: ^2.0.17
+  speech_to_text: ^6.1.1
   video_player: ^2.5.1
-  ffmpeg_kit_flutter: 5.1.0-LTS
 
 dev_dependencies:
   flutter_lints: ^2.0.0
